# cappa

./: .gitignore  LICENSE  Pipfile  README.md  end  requirements.txt  test_db
src/: Pipfile  manage.py  pyproject.toml  start.sh  urls.py  wsgi.py
src/admin/: middleware.py
src/app/: api_urls.py  settings.py  test_runner.py  urls.py  wsgi.py
src/app/accounts/: __init__.py  admin.py  apps.py  enums.py  managers.py  models.py  querysets.py  services.py
src/app/auth/: forms.py  middleware.py  mixins.py  permissions.py  urls.py  utils.py  views.py
src/app/common/: decorators.py  fields.py  filters.py  logger.py  mixins.py
src/app/databases/: __init__.py  admin.py  apps.py  enums.py  models.py  service.py  utils.py
src/app/groups/: __init__.py  admin.py  apps.py  enums.py  forms.py  models.py  querysets.py  urls.py  views.py
src/app/langs/: apps.py  (+1 more)
src/cappa/: urls.py  wsgi.py
src/groups/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
src/langs/: __init__.py  admin.py  apps.py  models.py
src/news/: __init__.py  admin.py  apps.py  models.py
src/profile/: __init__.py  apps.py  backends.py  forms.py  views.py
src/quizzes/: __init__.py  apps.py  urls.py
src/service/: __init__.py  apps.py  context_processors.py
src/settings/: __init__.py  base.py  local.py
src/tasks/: __init__.py  admin.py  apps.py  forms.py  models.py  widgets.py
src/templates/: base.html  frontpage.html
src/templatetags/: base_tags.py
src/training/: __init__.py  apps.py  urls.py  widgets.py
src/utils/: db.py  editor.py  msg.py
src/widgets/: ace.py  json.py
(+997 files in other folders)
